# typetrans

./: .env.example  MACOS_PERMISSIONS.md  QUICKSTART.md  README.md  components.json  conductor.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml  test-build.yml
src/: App.css  App.tsx  Home.tsx  PermissionCheck.css  PermissionCheck.tsx  SettingsPage.tsx  Translator.css  Translator.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccessibilityGuard.tsx  SettingsLayout.tsx  Sidebar.tsx
src/components/effects/: StarrySky.tsx
src/components/translator/: TranslatorHeader.tsx  TranslatorInput.tsx  TranslatorOutput.tsx
src/components/ui/: table.tsx
src/hooks/: useTheme.tsx  useTranslatorState.ts  useWindowControls.ts  useWindowShortcuts.ts
src/lib/: caret.ts  shortcutUtils.ts
src/pages/: About.tsx  GeneralSettings.tsx  ModelSettings.tsx  ServiceSettings.tsx  ShortcutSettings.tsx
src/store/: shortcutStore.ts
