[package]
name = "typetrans"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typetrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-macos-permissions = "2.3.0"
window-vibrancy = "0.5"
log = "0.4"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.42"
enigo = "0.6.1"
mouse_position = "0.1.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
